PPL_assignment3/initial/src/main/d96/parser/.antlr/D96Parser.py
# Generated from c:\Users\Dell\Desktop\PPL_assignment3\initial\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'void'", "<INVALID>", "<INVALID>", 
                     "'Break'", "'Continue'", "'If'", "'Elseif'", "'Else'", 
                     "'Foreach'", "'True'", "'False'", "'Array'", "'In'", 
                     "'Int'", "'Float'", "'Boolean'", "'String'", "'Null'", 
                     "'Return'", "'Class'", "'Val'", "'Var'", "'Constructor'", 
                     "'Destructor'", "'New'", "'By'", "'Self'", "'+'", "'+.'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'::'", "'..'", "';'", "','", 
                     "':'", "'.'", "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "BOOLNUM", "VOIDTYPE", "STRCMP", "MULnDIVnMOL", 
                      "BREAK", "CONTINUE", "IF", "ELSEIF", "ELSE", "FOREACH", 
                      "TRUE", "FALSE", "ARRAY", "IN", "INT", "FLOAT", "BOOLEAN", 
                      "STR", "NULL", "RETURN", "CLASS", "VAL", "VAR", "CONSTRUCTOR", 
                      "DESTRUCTOR", "NEW", "BY", "SELF", "ADD", "CONCAT", 
                      "MINUS", "MULTIPLY", "DEVIDE", "MODULO", "NOT", "ASSIGN", 
                      "LOGICAL", "RELATIONAL", "NEWOP", "DOUBLE_COLON", 
                      "DOUBLE_DOT", "SEMI", "COMMA", "COLON", "DOT", "LB", 
                      "RB", "LSB", "RSB", "LCB", "RCB", "ID", "STATICID", 
                      "P_INTLIT", "INTLIT", "FLOATLIT", "ESC_SEQ", "STRINGLIT", 
                      "COMMENT", "WS", "UNCLOSE_STRING", "ERROR_CHAR", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_stmConstructorDecl = 1
    RULE_stmdDestructorDecl = 2
    RULE_parameterList = 3
    RULE_oneParam = 4
    RULE_arrayLiteral = 5
    RULE_typeData = 6
    RULE_typeDataPrimitive = 7
    RULE_literal = 8
    RULE_arrayType = 9
    RULE_expIndex = 10
    RULE_canBeIndex = 11
    RULE_expObjCreation = 12
    RULE_scalarVariable = 13
    RULE_expIndexFree = 14
    RULE_canBeIndexFree = 15
    RULE_expInstanceAttributeAccess = 16
    RULE_expTemp1 = 17
    RULE_expInstanceMethodInvocation = 18
    RULE_expTemp2 = 19
    RULE_expStaticAttributeAccess = 20
    RULE_expStaticMethodInvocation = 21
    RULE_listOfExpressions = 22
    RULE_expression = 23
    RULE_exp_0 = 24
    RULE_exp_1 = 25
    RULE_exp_2 = 26
    RULE_exp_3 = 27
    RULE_exp_4 = 28
    RULE_exp_5 = 29
    RULE_exp_6 = 30
    RULE_exp_7 = 31
    RULE_exp_8 = 32
    RULE_exp_9 = 33
    RULE_exp_10 = 34
    RULE_exp_11 = 35
    RULE_stmVariableDecl = 36
    RULE_list_att = 37
    RULE_list_att_term = 38
    RULE_stmVariableDeclInFunction = 39
    RULE_list_attInFunction = 40
    RULE_list_att_termInFunction = 41
    RULE_lhs = 42
    RULE_stmAssignment = 43
    RULE_stmIf = 44
    RULE_stmBreak = 45
    RULE_stmContinue = 46
    RULE_stmReturn = 47
    RULE_stmMethodInvocation = 48
    RULE_exp_8V2 = 49
    RULE_statement = 50
    RULE_listOfStatement = 51
    RULE_stmBlock = 52
    RULE_stmBlockInFunction = 53
    RULE_statementInFunction = 54
    RULE_stmForEach = 55
    RULE_stmClassDecl = 56
    RULE_classBody = 57
    RULE_stmMethodDecl = 58

    ruleNames =  [ "program", "stmConstructorDecl", "stmdDestructorDecl", 
                   "parameterList", "oneParam", "arrayLiteral", "typeData", 
                   "typeDataPrimitive", "literal", "arrayType", "expIndex", 
                   "canBeIndex", "expObjCreation", "scalarVariable", "expIndexFree", 
                   "canBeIndexFree", "expInstanceAttributeAccess", "expTemp1", 
                   "expInstanceMethodInvocation", "expTemp2", "expStaticAttributeAccess", 
                   "expStaticMethodInvocation", "listOfExpressions", "expression", 
                   "exp_0", "exp_1", "exp_2", "exp_3", "exp_4", "exp_5", 
                   "exp_6", "exp_7", "exp_8", "exp_9", "exp_10", "exp_11", 
                   "stmVariableDecl", "list_att", "list_att_term", "stmVariableDeclInFunction", 
                   "list_attInFunction", "list_att_termInFunction", "lhs", 
                   "stmAssignment", "stmIf", "stmBreak", "stmContinue", 
                   "stmReturn", "stmMethodInvocation", "exp_8V2", "statement", 
                   "listOfStatement", "stmBlock", "stmBlockInFunction", 
                   "statementInFunction", "stmForEach", "stmClassDecl", 
                   "classBody", "stmMethodDecl" ]

    EOF = Token.EOF
    BOOLNUM=1
    VOIDTYPE=2
    STRCMP=3
    MULnDIVnMOL=4
    BREAK=5
    CONTINUE=6
    IF=7
    ELSEIF=8
    ELSE=9
    FOREACH=10
    TRUE=11
    FALSE=12
    ARRAY=13
    IN=14
    INT=15
    FLOAT=16
    BOOLEAN=17
    STR=18
    NULL=19
    RETURN=20
    CLASS=21
    VAL=22
    VAR=23
    CONSTRUCTOR=24
    DESTRUCTOR=25
    NEW=26
    BY=27
    SELF=28
    ADD=29
    CONCAT=30
    MINUS=31
    MULTIPLY=32
    DEVIDE=33
    MODULO=34
    NOT=35
    ASSIGN=36
    LOGICAL=37
    RELATIONAL=38
    NEWOP=39
    DOUBLE_COLON=40
    DOUBLE_DOT=41
    SEMI=42
    COMMA=43
    COLON=44
    DOT=45
    LB=46
    RB=47
    LSB=48
    RSB=49
    LCB=50
    RCB=51
    ID=52
    STATICID=53
    P_INTLIT=54
    INTLIT=55
    FLOATLIT=56
    ESC_SEQ=57
    STRINGLIT=58
    COMMENT=59
    WS=60
    UNCLOSE_STRING=61
    ERROR_CHAR=62
    ILLEGAL_ESCAPE=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def stmClassDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.StmClassDeclContext)
            else:
                return self.getTypedRuleContext(D96Parser.StmClassDeclContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 118
                self.stmClassDecl()
                self.state = 121 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 123
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmConstructorDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def parameterList(self):
            return self.getTypedRuleContext(D96Parser.ParameterListContext,0)


        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def stmBlockInFunction(self):
            return self.getTypedRuleContext(D96Parser.StmBlockInFunctionContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_stmConstructorDecl




    def stmConstructorDecl(self):

        localctx = D96Parser.StmConstructorDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmConstructorDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(D96Parser.CONSTRUCTOR)
            self.state = 126
            self.match(D96Parser.LB)
            self.state = 127
            self.parameterList()
            self.state = 128
            self.match(D96Parser.RB)
            self.state = 129
            self.stmBlockInFunction()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmdDestructorDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def stmBlockInFunction(self):
            return self.getTypedRuleContext(D96Parser.StmBlockInFunctionContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_stmdDestructorDecl




    def stmdDestructorDecl(self):

        localctx = D96Parser.StmdDestructorDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmdDestructorDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(D96Parser.DESTRUCTOR)
            self.state = 132
            self.match(D96Parser.LB)
            self.state = 133
            self.match(D96Parser.RB)
            self.state = 134
            self.stmBlockInFunction()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oneParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.OneParamContext)
            else:
                return self.getTypedRuleContext(D96Parser.OneParamContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.SEMI)
            else:
                return self.getToken(D96Parser.SEMI, i)

        def getRuleIndex(self):
            return D96Parser.RULE_parameterList




    def parameterList(self):

        localctx = D96Parser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID:
                self.state = 136
                self.oneParam()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==D96Parser.SEMI:
                    self.state = 137
                    self.match(D96Parser.SEMI)
                    self.state = 138
                    self.oneParam()
                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OneParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typeData(self):
            return self.getTypedRuleContext(D96Parser.TypeDataContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_oneParam




    def oneParam(self):

        localctx = D96Parser.OneParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_oneParam)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(D96Parser.ID)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 147
                self.match(D96Parser.COMMA)
                self.state = 148
                self.match(D96Parser.ID)
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 154
            self.match(D96Parser.COLON)
            self.state = 155
            self.typeData()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayLiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(D96Parser.ARRAY, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(D96Parser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_arrayLiteral




    def arrayLiteral(self):

        localctx = D96Parser.ArrayLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arrayLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(D96Parser.ARRAY)
            self.state = 158
            self.match(D96Parser.LB)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.BOOLNUM) | (1 << D96Parser.ARRAY) | (1 << D96Parser.NULL) | (1 << D96Parser.NEW) | (1 << D96Parser.SELF) | (1 << D96Parser.MINUS) | (1 << D96Parser.NOT) | (1 << D96Parser.LB) | (1 << D96Parser.ID) | (1 << D96Parser.P_INTLIT) | (1 << D96Parser.INTLIT) | (1 << D96Parser.FLOATLIT) | (1 << D96Parser.STRINGLIT))) != 0):
                self.state = 159
                self.expression()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==D96Parser.COMMA:
                    self.state = 160
                    self.match(D96Parser.COMMA)

                    self.state = 161
                    self.expression()
                    self.state = 166
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 169
            self.match(D96Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(D96Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(D96Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(D96Parser.BOOLEAN, 0)

        def STR(self):
            return self.getToken(D96Parser.STR, 0)

        def arrayType(self):
            return self.getTypedRuleContext(D96Parser.ArrayTypeContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_typeData




    def typeData(self):

        localctx = D96Parser.TypeDataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typeData)
        try:
            self.state = 177
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.match(D96Parser.INT)
                pass
            elif token in [D96Parser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.match(D96Parser.FLOAT)
                pass
            elif token in [D96Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 173
                self.match(D96Parser.BOOLEAN)
                pass
            elif token in [D96Parser.STR]:
                self.enterOuterAlt(localctx, 4)
                self.state = 174
                self.match(D96Parser.STR)
                pass
            elif token in [D96Parser.ARRAY]:
                self.enterOuterAlt(localctx, 5)
                self.state = 175
                self.arrayType()
                pass
            elif token in [D96Parser.ID]:
                self.enterOuterAlt(localctx, 6)
                self.state = 176
                self.match(D96Parser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDataPrimitiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(D96Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(D96Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(D96Parser.BOOLEAN, 0)

        def STR(self):
            return self.getToken(D96Parser.STR, 0)

        def arrayType(self):
            return self.getTypedRuleContext(D96Parser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_typeDataPrimitive




    def typeDataPrimitive(self):

        localctx = D96Parser.TypeDataPrimitiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeDataPrimitive)
        try:
            self.state = 184
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.match(D96Parser.INT)
                pass
            elif token in [D96Parser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.match(D96Parser.FLOAT)
                pass
            elif token in [D96Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 181
                self.match(D96Parser.BOOLEAN)
                pass
            elif token in [D96Parser.STR]:
                self.enterOuterAlt(localctx, 4)
                self.state = 182
                self.match(D96Parser.STR)
                pass
            elif token in [D96Parser.ARRAY]:
                self.enterOuterAlt(localctx, 5)
                self.state = 183
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def P_INTLIT(self):
            return self.getToken(D96Parser.P_INTLIT, 0)

        def INTLIT(self):
            return self.getToken(D96Parser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(D96Parser.FLOATLIT, 0)

        def STRINGLIT(self):
            return self.getToken(D96Parser.STRINGLIT, 0)

        def BOOLNUM(self):
            return self.getToken(D96Parser.BOOLNUM, 0)

        def arrayLiteral(self):
            return self.getTypedRuleContext(D96Parser.ArrayLiteralContext,0)


        def NULL(self):
            return self.getToken(D96Parser.NULL, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_literal




    def literal(self):

        localctx = D96Parser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_literal)
        try:
            self.state = 193
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.P_INTLIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 186
                self.match(D96Parser.P_INTLIT)
                pass
            elif token in [D96Parser.INTLIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 187
                self.match(D96Parser.INTLIT)
                pass
            elif token in [D96Parser.FLOATLIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 188
                self.match(D96Parser.FLOATLIT)
                pass
            elif token in [D96Parser.STRINGLIT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 189
                self.match(D96Parser.STRINGLIT)
                pass
            elif token in [D96Parser.BOOLNUM]:
                self.enterOuterAlt(localctx, 5)
                self.state = 190
                self.match(D96Parser.BOOLNUM)
                pass
            elif token in [D96Parser.ARRAY]:
                self.enterOuterAlt(localctx, 6)
                self.state = 191
                self.arrayLiteral()
                pass
            elif token in [D96Parser.NULL]:
                self.enterOuterAlt(localctx, 7)
                self.state = 192
                self.match(D96Parser.NULL)
                pass
            else:
                raise NoViableAltException(self)
